--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
 </head>
 <body class="w3-light-grey">
-
-<!-- w3-content defines a container for fixed size centered content,
-and is wrapped around the whole page content, except for the footer in this example -->
 <div class="w3-content" style="max-width:1400px">
 
 <!-- Header -->
@@ -39,39 +36,20 @@ and is wrapped around the whole page content, except for the footer in this exam
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="w3-margin-right w3-large w3-text-teal"></i>Designer</p>
-          <p><i class="w3-margin-right w3-large w3-text-teal"></i>London, UK</p>
-          <p><i class="w3-margin-right w3-large w3-text-teal"></i>ex@mail.com</p>
-          <p><i class="w3-margin-right w3-large w3-text-teal"></i>1224435534</p>
-<!--
-          <hr>
-          <p class="w3-large"><b><i class="w3-margin-right w3-text-teal"></i>View Entire Works - </b></p>
-          <p><button class="w3-button w3-teal w3-round">Story Index</button></p>
-          <br>
-
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Visit Offsite</b></p>
-          <p><button class="w3-button w3-teal w3-round">Visit Third Party</button></p>
-          <br>
--->
+          <p><i class="w3-margin-right w3-large w3-text-teal"></i>A writer doing a poor attempt to write about talking, two legged, animals who occasionally do and occasionally do not do things.</p>
+          <p><i class="w3-margin-right w3-large w3-text-teal"></i>For those who still know how to use these:</p>
+          <p><i class="w3-margin-right w3-large w3-text-teal"></i>FCC A- C D H- M- P R++ T++ W Z+ c++ d++ e++ iwf++ j p--</p>
         </div>
       </div><br>
 
        <!-- Other Links -->
       <div class="w3-card w3-round">
         <div class="w3-white">
-          <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="w3-margin-right"></i> View All Works</button>
-          <div id="Demo1" class="w3-hide w3-container">
+          <a class="w3-button w3-block w3-theme-l1 w3-left-align" href="index/works.html" target="_blank"><i class="w3-margin-right"></i> View All Works</a>
+          <a class="w3-button w3-block w3-theme-l1 w3-left-align" href="https://www.sofurry.com/" target="_blank"><i class="w3-margin-right"></i> Visit Sofurry</a>
+          <a class="w3-button w3-block w3-theme-l1 w3-left-align" href="index/seriesindex.html" target="_blank"><i class="w3-margin-right"></i> View Series Index</a>
+          <a class="w3-button w3-block w3-theme-l1 w3-left-align" href="index/universeindex.html" target="_blank"><i class="w3-margin-right"></i> View Universe Index</a>
           </div>
-          <button onclick="myFunction('Demo2')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="w3-margin-right"></i> Visit Offsite</button>
-          <div id="Demo2" class="w3-hide w3-container">
-          </div>
-          <button onclick="myFunction('Demo3')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="w3-margin-right"></i> View Series Index</button>
-          <div id="Demo3" class="w3-hide w3-container">
-          </div>
-          <button onclick="myFunction('Demo4')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="w3-margin-right"></i> View Universe Index</button>
-          <div id="Demo4" class="w3-hide w3-container">
-          </div>
-         </div>
       </div>
     <!-- End Left Column -->
     </div>
@@ -90,7 +68,7 @@ and is wrapped around the whole page content, except for the footer in this exam
           <span class="w3-tag w3-teal w3-round">Tag 3</span>
           <span class="w3-tag w3-teal w3-round">Tag 4</span>
           <span class="w3-tag w3-teal w3-round">Tag 5</span>
-          <p><a href="texts/test1.html" class="w3-button w3-teal"></i>Read Here</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-teal"></i>Read Here</a></p>
           <hr>
         </div>
         <div class="w3-container">
@@ -102,7 +80,7 @@ and is wrapped around the whole page content, except for the footer in this exam
           <span class="w3-tag w3-teal w3-round">Tag 3</span>
           <span class="w3-tag w3-teal w3-round">Tag 4</span>
           <span class="w3-tag w3-teal w3-round">Tag 5</span>
-          <p><a href="texts/test1.html" class="w3-button w3-teal"></i>Read Here</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-teal"></i>Read Here</a></p>
           <hr>
         </div>
         <div class="w3-container">
@@ -114,7 +92,7 @@ and is wrapped around the whole page content, except for the footer in this exam
           <span class="w3-tag w3-teal w3-round">Tag 3</span>
           <span class="w3-tag w3-teal w3-round">Tag 4</span>
           <span class="w3-tag w3-teal w3-round">Tag 5</span>
-          <p><a href="texts/test1.html" class="w3-button w3-teal"></i>Read Here</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-teal"></i>Read Here</a></p>
           <br>
         </div>
       </div>
@@ -126,19 +104,19 @@ and is wrapped around the whole page content, except for the footer in this exam
         <div class="w3-container">
           <h5 class="w3-opacity"><b>World of Coron - </b><span class="w3-tag w3-teal w3-round">Work in Progress</span></h5>
           <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <p><a href="texts/test1.html" class="w3-button w3-teal"></i>View Series</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Series</a></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Twilight Valley - </b><span class="w3-tag w3-teal w3-round">Work in Progress</span></h5>
           <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <p><a href="texts/test1.html" class="w3-button w3-teal"></i>View Series</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Series</a></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Sun Kissed - </b><span class="w3-tag w3-teal w3-round">Finished</span></h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-          <p><a href="texts/test1.html" class="w3-button w3-teal"></i>View Series</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Series</a></p>
           <br>
         </div>
       </div>
@@ -150,19 +128,19 @@ and is wrapped around the whole page content, except for the footer in this exam
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Coron - </b><span class="w3-tag w3-teal w3-round">Work in Progress</span></h5>
           <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <p><a href="texts/test1.html" class="w3-button w3-teal"></i>View Universe</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Universe</a></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>The Forest - </b><span class="w3-tag w3-teal w3-round">Work in Progress</span></h5>
           <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <p><a href="texts/test1.html" class="w3-button w3-teal"></i>View Universe</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Universe</a></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>The Forest - </b><span class="w3-tag w3-teal w3-round">Retired</span></h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-          <p><a href="texts/test1.html" class="w3-button w3-teal"></i>View Universe</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Universe</a></p>
           <br>
         </div>
       </div>
