--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
        <!-- Other Links -->
       <div class="w3-card w3-round">
         <div class="w3-white">
-          <a class="w3-button w3-block w3-theme-l1 w3-left-align" href="index/works.html" target="_blank"><i class="w3-margin-right"></i> View All Works</a>
-          <a class="w3-button w3-block w3-theme-l1 w3-left-align" href="https://www.sofurry.com/" target="_blank"><i class="w3-margin-right"></i> Visit Sofurry</a>
-          <a class="w3-button w3-block w3-theme-l1 w3-left-align" href="index/seriesindex.html" target="_blank"><i class="w3-margin-right"></i> View Series Index</a>
-          <a class="w3-button w3-block w3-theme-l1 w3-left-align" href="index/universeindex.html" target="_blank"><i class="w3-margin-right"></i> View Universe Index</a>
+          <a href="indices/allworks.html" class="w3-button w3-bar-item w3-block w3-theme-l1 w3-left-align"><i class="w3-margin-right"></i> View All Works</a>
+          <a class="w3-button w3-bar-item w3-block w3-theme-l1 w3-left-align" href="indices/seriesindex.html"><i class="w3-margin-right"></i> View Series Index</a>
+          <a class="w3-button w3-bar-item w3-block w3-theme-l1 w3-left-align" href="indices/universeindex.html"><i class="w3-margin-right"></i> View Universe Index</a>
+          <a class="w3-button w3-bar-item w3-block w3-theme-l1 w3-left-align" href="https://www.sofurry.com/"><i class="w3-margin-right"></i> Visit Sofurry</a>
           </div>
       </div>
     <!-- End Left Column -->
@@ -68,7 +68,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <span class="w3-tag w3-teal w3-round">Tag 3</span>
           <span class="w3-tag w3-teal w3-round">Tag 4</span>
           <span class="w3-tag w3-teal w3-round">Tag 5</span>
-          <p><a href="texts/template.html" class="w3-button w3-teal"></i>Read Here</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-bar-item w3-bar-item w3-bar-item w3-teal"></i>Read Here</a></p>
           <hr>
         </div>
         <div class="w3-container">
@@ -80,7 +80,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <span class="w3-tag w3-teal w3-round">Tag 3</span>
           <span class="w3-tag w3-teal w3-round">Tag 4</span>
           <span class="w3-tag w3-teal w3-round">Tag 5</span>
-          <p><a href="texts/template.html" class="w3-button w3-teal"></i>Read Here</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-bar-item w3-teal"></i>Read Here</a></p>
           <hr>
         </div>
         <div class="w3-container">
@@ -92,7 +92,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <span class="w3-tag w3-teal w3-round">Tag 3</span>
           <span class="w3-tag w3-teal w3-round">Tag 4</span>
           <span class="w3-tag w3-teal w3-round">Tag 5</span>
-          <p><a href="texts/template.html" class="w3-button w3-teal"></i>Read Here</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-bar-item w3-teal"></i>Read Here</a></p>
           <br>
         </div>
       </div>
@@ -102,48 +102,50 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Series</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>World of Coron - </b><span class="w3-tag w3-teal w3-round">Work in Progress</span></h5>
+          <h5 class="w3-opacity"><b>/hmofa/ - </b><span class="w3-tag w3-teal w3-round">Work in Progress</span></h5>
           <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Series</a></p>
+          <p><a href="indices/hmofaindex.html" class="w3-button w3-bar-item w3-teal"></i>View Series</a></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Twilight Valley - </b><span class="w3-tag w3-teal w3-round">Work in Progress</span></h5>
           <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Series</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-bar-item w3-teal"></i>View Series</a></p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Sun Kissed - </b><span class="w3-tag w3-teal w3-round">Finished</span></h5>
+          <h5 class="w3-opacity"><b>Example - </b><span class="w3-tag w3-teal w3-round">Finished</span></h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Series</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-bar-item w3-teal"></i>View Series</a></p>
           <br>
         </div>
       </div>
 
 
 <!--    Universes   -->
+<!--
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Universes</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Coron - </b><span class="w3-tag w3-teal w3-round">Work in Progress</span></h5>
           <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Universe</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-bar-item w3-teal"></i>View Universe</a></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>The Forest - </b><span class="w3-tag w3-teal w3-round">Work in Progress</span></h5>
           <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Universe</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-bar-item w3-teal"></i>View Universe</a></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>The Forest - </b><span class="w3-tag w3-teal w3-round">Retired</span></h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-          <p><a href="texts/template.html" class="w3-button w3-teal"></i>View Universe</a></p>
+          <p><a href="texts/template.html" class="w3-button w3-bar-item w3-teal"></i>View Universe</a></p>
           <br>
         </div>
       </div>
+-->
 
     <!-- End Right Column -->
     </div>
@@ -155,7 +157,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </div>
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a></p>
 </footer>
 
 </body>
