--- a/indices/hmofaindex.html
+++ b/indices/hmofaindex.html
@@ -53,19 +53,19 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Series #1</b></h5>
           <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <p><a href="texts/template.html" class="w3-button w3-bar-item w3-teal">Read Here</a></p>
+          <p><a href="../texts/template.html" class="w3-button w3-bar-item w3-teal">Read Here</a></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Series #2</b></h5>
           <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
-          <p><a href="texts/template.html" class="w3-button w3-bar-item w3-teal">Read Here</a></p>
+          <p><a href="../texts/template.html" class="w3-button w3-bar-item w3-teal">Read Here</a></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Series #3</b></h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-          <p><a href="texts/template.html" class="w3-button w3-bar-item w3-teal">Read Here</a></p>
+          <p><a href="../texts/template.html" class="w3-button w3-bar-item w3-teal">Read Here</a></p>
           <br>
         </div>
       </div>
